Applied license and updated script to use variables found in the .env

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-ISSUE_TRAC_DB_HOST=localhost
-ISSUE_TRAC_DB_USER=postgres
-ISSUE_TRAC_DB_NAME=
-ISSUE_TRAC_PWD=
-ISSUE_TRAC_PORT=5432
-ISSUE_TRAC_TIGER_YEAR=2022
+PGHOSTADDR=localhost
+PGUSER=dbmaster
+PGDATABASE=issue_trac
+PGPASSWORD=
+PGPORT=5432
+TIGER_YEAR=2022
